--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+# Environment
 .env
-venv/
+.env.local
+
+# Python
 __pycache__/
 *.pyc
+*.pyo
+venv/
+.venv/
+
+# Streamlit
+.streamlit/
+
+# OS
 .DS_Store
